--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,8 +10,15 @@
     "python.linting.flake8Enabled": true,
 
     // Formatting
-    "python.formatting.provider": "black",
-    "editor.formatOnSave": true,
+    "black-formatter.path": ["${workspaceFolder}\\venv\\Scripts\\black.exe"],
+    "black-formatter.interpreter": ["${workspaceFolder}\\venv\\Scripts\\python.exe"],
+    "[python]": {
+        "editor.defaultFormatter": "ms-python.black-formatter",
+        "editor.formatOnSave": true,
+        "editor.tabSize": 4,
+        "editor.insertSpaces": true,
+        "editor.rulers": [88, 120]
+    },
     "editor.codeActionsOnSave": {
         "source.organizeImports": "explicit"
     },
@@ -31,12 +38,5 @@
         "**/*.pyc": true,
         "**/.pytest_cache": true,
         "**/.mypy_cache": true
-    },
-
-    // Editor
-    "[python]": {
-        "editor.tabSize": 4,
-        "editor.insertSpaces": true,
-        "editor.rulers": [88, 120]
     }
 }
